[package]
name        = "mediocore"
version     = "0.1.0"
description = "Linux cpu frequency scaling utility"
keywords    = ["cpufrequtils","linux","sysfs","cli"]
categories  = ["command-line-tool"]
authors     = ["razorheadfx <felix.girke@tu-dortmund.de>"]
license     = "MPL2"
readme      = "README.md"

[dependencies]
log         = "0.4.3"
serde       = "1.0.85"
serde_derive= "1.0.85"
structopt   = { version = "0.2"  , optional = true }
serde_json  = { version ="1.0.36", optional = true }


[features]
default     = ["bin"]
bin         = ["structopt", "serde_json"]