[package]
name        = "mediocore"
version     = "0.1.0"
description = "discover and manipulate linux cpu frequency settings"
keywords    = ["cpufrequtils","linux","sysfs","cli"]
categories  = ["command-line-utilities"]
authors     = ["razorheadfx <felix.girke@tu-dortmund.de>"]
license     = "MPL-2.0"
readme      = "README.md"
repository  = "https://github.com/razorheadfx/mediocore"
https       = "https://docs.rs/mediocore"

[dependencies]
log         = "0.4"
serde       = "1.0"
serde_derive= "1.0"
structopt   = { version = "0.2", optional = true }
serde_json  = { version = "1.0", optional = true }


[features]
default     = ["bin"]
bin         = ["structopt", "serde_json"]